--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -17,30 +17,30 @@ DockId=0x00000002,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1920,1080
+Size=1920,1061
 Collapsed=0
 
 [Window][Game]
 Pos=0,0
-Size=1235,731
+Size=1235,712
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Debug]
 Pos=0,0
-Size=1235,731
+Size=1235,712
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Hierarchy]
-Pos=335,733
+Pos=335,714
 Size=900,347
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Inspector]
 Pos=1237,0
-Size=683,1080
+Size=683,1061
 Collapsed=0
 DockId=0x00000011,0
 
@@ -114,7 +114,7 @@ Size=270,283
 Collapsed=0
 
 [Window][Console]
-Pos=0,733
+Pos=0,714
 Size=333,347
 Collapsed=0
 DockId=0x0000000E,0
@@ -131,7 +131,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=1235,731
+Size=1235,712
 Collapsed=0
 DockId=0x00000008,2
 
@@ -197,7 +197,7 @@ Size=125,588
 
 [Window][Inspector/leftLayout_96888853]
 IsChild=1
-Size=401,185
+Size=401,421
 
 [Window][Inspector/rightLayout_78BB1392]
 IsChild=1
@@ -298,14 +298,14 @@ DockNode                ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=
   DockNode              ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
   DockNode              ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
 DockNode                ID=0x00000016 Pos=227,132 Size=668,189 Selected=0x475E4117
-DockSpace               ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1080 Split=X
+DockSpace               ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1061 Split=X
   DockNode              ID=0x0000000C Parent=0x11111111 SizeRef=882,810 Split=X
     DockNode            ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
       DockNode          ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode          ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
         DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=881,525 Split=X Selected=0xD1EB2482
           DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1235,676 Split=Y Selected=0xD1EB2482
-            DockNode    ID=0x00000008 Parent=0x00000010 SizeRef=1136,731 CentralNode=1 Selected=0xD1EB2482
+            DockNode    ID=0x00000008 Parent=0x00000010 SizeRef=1136,731 CentralNode=1 Selected=0x1E7E18E3
             DockNode    ID=0x00000009 Parent=0x00000010 SizeRef=1136,347 Split=X Selected=0xBABDAE5E
               DockNode  ID=0x0000000E Parent=0x00000009 SizeRef=333,401 Selected=0xEA83D666
               DockNode  ID=0x0000000F Parent=0x00000009 SizeRef=900,401 Selected=0xBABDAE5E
