--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -17,32 +17,32 @@ DockId=0x00000002,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][Game]
-Pos=0,0
-Size=1235,712
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Debug]
-Pos=0,0
-Size=1235,712
-Collapsed=0
-DockId=0x00000008,1
-
-[Window][Hierarchy]
-Pos=335,714
-Size=900,347
+Pos=328,0
+Size=1104,658
 Collapsed=0
 DockId=0x0000000F,0
 
-[Window][Inspector]
-Pos=1237,0
-Size=683,1061
+[Window][Debug]
+Pos=328,0
+Size=1104,658
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000F,1
+
+[Window][Hierarchy]
+Pos=0,0
+Size=326,658
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Inspector]
+Pos=1434,0
+Size=486,1080
+Collapsed=0
+DockId=0x00000017,0
 
 [Window][Engine]
 Pos=0,527
@@ -114,10 +114,10 @@ Size=270,283
 Collapsed=0
 
 [Window][Console]
-Pos=0,714
-Size=333,347
+Pos=0,660
+Size=327,420
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000010,0
 
 [Window][Rendering]
 Pos=1107,158
@@ -130,10 +130,9 @@ Size=453,126
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,0
 Size=1235,712
 Collapsed=0
-DockId=0x00000008,2
+DockId=0x00000018,2
 
 [Window][Dear ImGui Debug Log]
 Pos=109,87
@@ -218,6 +217,22 @@ Pos=60,60
 Size=196,76
 Collapsed=0
 
+[Window][EditLayout]
+Pos=952,483
+Size=471,166
+Collapsed=0
+
+[Window][Asset]
+Pos=329,660
+Size=1103,420
+Collapsed=0
+DockId=0x00000018,0
+
+[Window][AssetEditor Layout]
+Pos=1110,372
+Size=683,287
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -298,23 +313,25 @@ DockNode                ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=
   DockNode              ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
   DockNode              ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
 DockNode                ID=0x00000016 Pos=227,132 Size=668,189 Selected=0x475E4117
-DockSpace               ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1061 Split=X
-  DockNode              ID=0x0000000C Parent=0x11111111 SizeRef=882,810 Split=X
-    DockNode            ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
-      DockNode          ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
-      DockNode          ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
-        DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=881,525 Split=X Selected=0xD1EB2482
-          DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1235,676 Split=Y Selected=0xD1EB2482
-            DockNode    ID=0x00000008 Parent=0x00000010 SizeRef=1136,731 CentralNode=1 Selected=0x1E7E18E3
-            DockNode    ID=0x00000009 Parent=0x00000010 SizeRef=1136,347 Split=X Selected=0xBABDAE5E
-              DockNode  ID=0x0000000E Parent=0x00000009 SizeRef=333,401 Selected=0xEA83D666
-              DockNode  ID=0x0000000F Parent=0x00000009 SizeRef=900,401 Selected=0xBABDAE5E
-          DockNode      ID=0x00000011 Parent=0x0000000A SizeRef=683,676 Selected=0x36DC96AB
-        DockNode        ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Selected=0x00161063
-    DockNode            ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
-      DockNode          ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
-      DockNode          ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
-  DockNode              ID=0x0000000D Parent=0x11111111 SizeRef=556,810 Split=Y Selected=0x29EABFBD
-    DockNode            ID=0x00000014 Parent=0x0000000D SizeRef=171,233 Selected=0xBABDAE5E
-    DockNode            ID=0x00000015 Parent=0x0000000D SizeRef=171,575 Selected=0x031DC75C
+DockSpace               ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1080 Split=X
+  DockNode              ID=0x00000011 Parent=0x11111111 SizeRef=1432,1080 Split=Y
+    DockNode            ID=0x00000008 Parent=0x00000011 SizeRef=1920,658 Split=X Selected=0xD1EB2482
+      DockNode          ID=0x0000000E Parent=0x00000008 SizeRef=326,633 Selected=0xBABDAE5E
+      DockNode          ID=0x0000000F Parent=0x00000008 SizeRef=1104,633 Selected=0x1E7E18E3
+    DockNode            ID=0x00000009 Parent=0x00000011 SizeRef=1920,420 Split=X
+      DockNode          ID=0x0000000C Parent=0x00000009 SizeRef=882,810 Split=X
+        DockNode        ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
+          DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
+          DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
+            DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=881,525 Split=X Selected=0xF0D94A78
+              DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=327,438 Selected=0xEA83D666
+              DockNode  ID=0x00000018 Parent=0x0000000A SizeRef=1103,438 CentralNode=1 Selected=0xF0D94A78
+            DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Selected=0x00161063
+        DockNode        ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
+          DockNode      ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
+          DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
+      DockNode          ID=0x0000000D Parent=0x00000009 SizeRef=556,810 Split=Y Selected=0x29EABFBD
+        DockNode        ID=0x00000014 Parent=0x0000000D SizeRef=171,233 Selected=0xBABDAE5E
+        DockNode        ID=0x00000015 Parent=0x0000000D SizeRef=171,575 Selected=0x031DC75C
+  DockNode              ID=0x00000017 Parent=0x11111111 SizeRef=486,1080 Selected=0x36DC96AB
 
