--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -521,6 +521,9 @@
     <ClCompile Include="Engine\Core\ECS\System\Systems\InstancedMeshSystem.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\ECS\System\Systems\TagSystem.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -713,6 +716,8 @@
     <ClInclude Include="Engine\Core\ECS\Core\ECSManager.h" />
     <ClInclude Include="Engine\Core\ECS\System\Systems\AnimationSystem.h" />
     <ClInclude Include="Engine\Core\ECS\System\Systems\InstancedMeshSystem.h" />
+    <ClInclude Include="Engine\Core\ECS\Components\TagComponent.h" />
+    <ClInclude Include="Engine\Core\ECS\System\Systems\TagSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
