--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -30,7 +30,7 @@ DockId=0x0000000F,0
 Pos=328,0
 Size=1104,658
 Collapsed=0
-DockId=0x0000000F,1
+DockId=0x0000000F,2
 
 [Window][Hierarchy]
 Pos=0,0
@@ -48,13 +48,13 @@ DockId=0x00000017,0
 Pos=0,527
 Size=241,283
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000006,0
 
 [Window][Scene]
-Pos=243,527
-Size=271,283
+Pos=328,0
+Size=1104,658
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000F,1
 
 [Window][Project]
 Pos=605,544
@@ -130,9 +130,10 @@ Size=453,126
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Size=1235,712
+Pos=328,0
+Size=1104,658
 Collapsed=0
-DockId=0x00000018,2
+DockId=0x0000000F,2
 
 [Window][Dear ImGui Debug Log]
 Pos=109,87
@@ -152,13 +153,14 @@ Collapsed=0
 DockId=0x00000015,0
 
 [Window][Dear ImGui Style Editor]
-Pos=366,129
-Size=708,443
+Pos=328,0
+Size=1104,658
 Collapsed=0
+DockId=0x0000000F,3
 
 [Window][Dear ImGui Demo/ResizableChild_478B81A3]
 IsChild=1
-Size=831,160
+Size=1053,160
 
 [Window][Dear ImGui Demo/Red_BEEF922B]
 IsChild=1
@@ -250,15 +252,15 @@ Column 1  Width=72
 Column 2  Width=72
 
 [Table][0xF1421304,3]
-RefScale=16
-Column 0  Width=72
-Column 1  Width=72
+RefScale=24
+Column 0  Width=108
+Column 1  Width=108
 Column 2  Weight=1.0000
 
 [Table][0xE212E0F0,6]
-RefScale=16
-Column 0  Width=72
-Column 1  Width=72
+RefScale=24
+Column 0  Width=108
+Column 1  Width=108
 Column 2  Width=-1
 Column 3  Weight=1.0000
 Column 4  Weight=1.0000
@@ -270,10 +272,10 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Table][0x95990F63,3]
-RefScale=16
-Column 0  Width=72
-Column 1  Width=72
-Column 2  Width=72
+RefScale=24
+Column 0  Width=108
+Column 1  Width=108
+Column 2  Width=108
 
 [Table][0x603C335E,2]
 Column 0  Weight=1.0000
@@ -314,29 +316,27 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode                ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
-  DockNode              ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
-  DockNode              ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
-DockNode                ID=0x00000016 Pos=227,132 Size=668,189 Selected=0x475E4117
-DockSpace               ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1080 Split=X
-  DockNode              ID=0x00000011 Parent=0x11111111 SizeRef=1432,1080 Split=Y
-    DockNode            ID=0x00000008 Parent=0x00000011 SizeRef=1920,658 Split=X Selected=0xD1EB2482
-      DockNode          ID=0x0000000E Parent=0x00000008 SizeRef=326,633 Selected=0xBABDAE5E
-      DockNode          ID=0x0000000F Parent=0x00000008 SizeRef=1104,633 Selected=0x1E7E18E3
-    DockNode            ID=0x00000009 Parent=0x00000011 SizeRef=1920,420 Split=X
-      DockNode          ID=0x0000000C Parent=0x00000009 SizeRef=882,810 Split=X
-        DockNode        ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
-          DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
-          DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
-            DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=881,525 Split=X Selected=0xF0D94A78
-              DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=327,438 Selected=0xEA83D666
-              DockNode  ID=0x00000018 Parent=0x0000000A SizeRef=1103,438 CentralNode=1 Selected=0xF0D94A78
-            DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Selected=0x00161063
-        DockNode        ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
-          DockNode      ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
-          DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
-      DockNode          ID=0x0000000D Parent=0x00000009 SizeRef=556,810 Split=Y Selected=0x29EABFBD
-        DockNode        ID=0x00000014 Parent=0x0000000D SizeRef=171,233 Selected=0xBABDAE5E
-        DockNode        ID=0x00000015 Parent=0x0000000D SizeRef=171,575 Selected=0x031DC75C
-  DockNode              ID=0x00000017 Parent=0x11111111 SizeRef=486,1080 Selected=0x36DC96AB
+DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
+  DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
+  DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
+DockNode              ID=0x00000016 Pos=227,132 Size=668,189 Selected=0x475E4117
+DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1080 Split=X
+  DockNode            ID=0x00000011 Parent=0x11111111 SizeRef=1432,1080 Split=Y
+    DockNode          ID=0x00000008 Parent=0x00000011 SizeRef=1920,658 Split=X Selected=0xD1EB2482
+      DockNode        ID=0x0000000E Parent=0x00000008 SizeRef=326,633 Selected=0xBABDAE5E
+      DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=1104,633 Selected=0xD1EB2482
+    DockNode          ID=0x00000009 Parent=0x00000011 SizeRef=1920,420 Split=X
+      DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=882,810 Split=X
+        DockNode      ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
+          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
+          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X
+            DockNode  ID=0x00000010 Parent=0x00000006 SizeRef=327,438 Selected=0xEA83D666
+            DockNode  ID=0x00000018 Parent=0x00000006 SizeRef=1103,438 CentralNode=1 Selected=0xF0D94A78
+        DockNode      ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
+          DockNode    ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
+          DockNode    ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
+      DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=556,810 Split=Y Selected=0x29EABFBD
+        DockNode      ID=0x00000014 Parent=0x0000000D SizeRef=171,233 Selected=0xBABDAE5E
+        DockNode      ID=0x00000015 Parent=0x0000000D SizeRef=171,575 Selected=0x031DC75C
+  DockNode            ID=0x00000017 Parent=0x11111111 SizeRef=486,1080 Selected=0x36DC96AB
 
