ドラッグアンドドロップ処理追加

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -240,6 +240,11 @@ Pos=1431,1046
 Size=508,230
 Collapsed=1
 
+[Window][Receiver]
+Pos=1149,523
+Size=194,212
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
